--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-lodash": "^4.18.0",
     "ember-maybe-import-regenerator": "^0.1.6",
+    "ember-md5": "^1.1.0",
     "ember-plotly-shim": "0.0.2",
     "ember-resolver": "^4.5.0",
     "ember-source": "~3.0.0",
