--- a/package.json
+++ b/package.json
@@ -4,11 +4,16 @@
   "description": "A basic charting component using Plotly.js",
   "keywords": [
     "ember-addon",
-    "data-visualization", "visualization",
-    "chart", "charting",
-    "graph", "graphing",
-    "plot", "plotting",
-    "plotly", "plotly.js"
+    "data-visualization",
+    "visualization",
+    "chart",
+    "charting",
+    "graph",
+    "graphing",
+    "plot",
+    "plotting",
+    "plotly",
+    "plotly.js"
   ],
   "license": "MIT",
   "author": "Jacob Quant <jacobq@gmail.com>",
@@ -21,7 +26,8 @@
     "build": "ember build",
     "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
     "start": "ember serve",
-    "test": "ember try:each"
+    "test": "ember test",
+    "test:all": "ember try:each"
   },
   "dependencies": {
     "ember-cli-babel": "^6.12.0",
@@ -30,7 +36,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.6.0",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~3.0.0",
+    "ember-cli": "~3.1.0-beta.1",
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
@@ -49,7 +55,7 @@
     "ember-md5": "^1.1.0",
     "ember-plotly-shim": "0.0.2",
     "ember-resolver": "^4.5.2",
-    "ember-source": "~3.0.0",
+    "ember-source": "~3.1.0-beta.1",
     "ember-source-channel-url": "^1.0.1",
     "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.3",
