--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-plotly",
-  "version": "0.0.2-debug.4",
+  "version": "0.0.2-debug.5",
   "description": "A basic charting component using Plotly.js",
   "keywords": [
     "ember-addon",
@@ -32,8 +32,7 @@
   "dependencies": {
     "ember-cli-babel": "^6.12.0",
     "ember-cli-htmlbars": "^2.0.3",
-    "ember-lodash": "^4.18.0",
-    "ember-plotly-shim": "0.0.2"
+    "ember-plotly-shim": "git+ssh://git@github.com:jacobq/ember-plotly-shim.git#debug"
   },
   "devDependencies": {
     "broccoli-asset-rev": "^2.6.0",
@@ -52,6 +51,7 @@
     "ember-disable-prototype-extensions": "^1.1.3",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-lodash": "^4.18.0",
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.1.0",
     "ember-resolver": "^4.5.2",
