--- a/package.json
+++ b/package.json
@@ -65,7 +65,7 @@
     "testdouble": "^3.5.2"
   },
   "engines": {
-    "node": "^4.5 || 6.* || >= 7.*"
+    "node": "6.* || >= 7.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
