--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "repository": "https://github.com/EmberMN/ember-cli-plotly",
   "scripts": {
     "build": "ember build",
-    "lint:js": "eslint ./*.js addon addon-test-support app config lib server test-support tests",
+    "lint:js": "eslint ./*.js addon addon-test-support app blueprints config lib server test-support tests",
     "start": "ember serve",
     "test": "ember test",
     "test:all": "ember try:each"
@@ -39,7 +39,7 @@
   "devDependencies": {
     "broccoli-asset-rev": "^2.6.0",
     "ember-ajax": "^3.0.0",
-    "ember-cli": "~3.1.0-beta.1",
+    "ember-cli": "~3.1.3",
     "ember-cli-dependency-checker": "^2.1.0",
     "ember-cli-eslint": "^4.2.3",
     "ember-cli-htmlbars-inline-precompile": "^1.0.2",
@@ -56,7 +56,7 @@
     "ember-maybe-import-regenerator": "^0.1.6",
     "ember-md5": "^1.1.0",
     "ember-resolver": "^4.5.2",
-    "ember-source": "~3.1.0-beta.1",
+    "ember-source": "~3.1.0",
     "ember-source-channel-url": "^1.0.1",
     "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.3",
