--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
   },
   "devDependencies": {
     "@ember-decorators/babel-transforms": "^2.0.0",
+    "babel-eslint": "^8.2.3",
     "broccoli-asset-rev": "^2.6.0",
     "ember-ajax": "^3.0.0",
     "ember-cli": "~3.1.3",
