--- a/package.json
+++ b/package.json
@@ -61,10 +61,12 @@
     "ember-resolver": "^4.5.2",
     "ember-source": "~3.1.0",
     "ember-source-channel-url": "^1.0.1",
+    "ember-truth-helpers": "^2.0.0",
     "ember-try": "^0.2.23",
     "eslint-plugin-ember": "^5.0.3",
     "eslint-plugin-node": "^6.0.1",
     "loader.js": "^4.6.0",
+    "safe-json-stringify": "^1.2.0",
     "testdouble": "^3.5.2"
   },
   "engines": {
