--- a/.travis.yml
+++ b/.travis.yml
@@ -42,5 +42,11 @@ jobs:
     - env: EMBER_TRY_SCENARIO=ember-default-with-jquery
 
 script:
-  - echo $EMBER_TRY_SCENARIO
-  - if [ -z ${EMBER_TRY_SCENARIO} ]; then ember test; else node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO; fi
+  >
+    YELLOW="\033[1;33m";
+    NOCOLOR="\033[0m";
+    echo -e "${YELLOW}EMBER_TRY_SCENARIO=$EMBER_TRY_SCENARIO${NOCOLOR}";
+    if [ -z ${EMBER_TRY_SCENARIO} ];
+    then ember test;
+    else node_modules/.bin/ember try:one $EMBER_TRY_SCENARIO;
+    fi
