ci: test on node 8

--- a/package.json
+++ b/package.json
@@ -73,7 +73,7 @@
     "testdouble": "3.12.4"
   },
   "engines": {
-    "node": "8.* || >= 10.*"
+    "node": "8.* || 10.* || >= 12.*"
   },
   "ember-addon": {
     "configPath": "tests/dummy/config"
