ci: increase memory limit to 2GiB
This is to work around what appears to be a problem with
babel/ember-cli-babel/... on node 8 / 10.

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ env:
   global:
     # See https://git.io/vdao3 for details.
     - JOBS=1
+    - NODE_OPTIONS=--max_old_space_size=2048
 
 branches:
   only:
