fix: install @ember/test-waiters
Install seemd to fail withou @babel/core^7
so I installed that too.

--- a/package.json
+++ b/package.json
@@ -42,7 +42,9 @@
     "plotly.js": "1.57.1"
   },
   "devDependencies": {
+    "@babel/core": "^7",
     "@ember/optional-features": "2.0.0",
+    "@ember/test-waiters": "^2.3.0",
     "@glimmer/component": "^1.0.2",
     "@glimmer/tracking": "^1.0.2",
     "babel-eslint": "10.1.0",
