--- a/package.json
+++ b/package.json
@@ -33,20 +33,21 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
+    "@ember/test-waiters": "^2.3.2",
     "debug": "4.3.1",
-    "ember-auto-import": "^1.8.0",
+    "ember-auto-import": "^1.10.0",
     "ember-cli-babel": "7.23.0",
     "ember-cli-htmlbars": "5.3.1",
     "ember-decorators": "6.1.1",
     "ember-lodash": "4.19.5",
-    "plotly.js": "1.57.1"
+    "plotly.js": "1.58.3"
   },
   "devDependencies": {
     "@babel/core": "^7",
     "@ember/optional-features": "2.0.0",
-    "@ember/test-waiters": "^2.3.0",
-    "@glimmer/component": "^1.0.2",
-    "@glimmer/tracking": "^1.0.2",
+    "@ember/test-helpers": "^2.1.3",
+    "@glimmer/component": "^1.0.3",
+    "@glimmer/tracking": "^1.0.3",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "3.0.0",
     "ember-cli": "3.23.0",
@@ -63,11 +64,11 @@
     "ember-load-initializers": "2.1.2",
     "ember-maybe-import-regenerator": "0.1.6",
     "ember-md5": "1.2.0",
-    "ember-qunit": "4.6.0",
+    "ember-qunit": "5.1.1",
     "ember-resolver": "8.0.2",
     "ember-source": "3.23.1",
     "ember-source-channel-url": "3.0.0",
-    "ember-template-lint": "^2.14.0",
+    "ember-template-lint": "^2.15.0",
     "ember-truth-helpers": "3.0.0",
     "ember-try": "1.4.0",
     "eslint": "^7.15.0",
@@ -75,6 +76,7 @@
     "eslint-plugin-node": "11.1.0",
     "loader.js": "4.7.0",
     "npm-run-all": "^4.1.5",
+    "qunit": "2.13.0",
     "qunit-dom": "1.6.0",
     "safe-json-stringify": "1.2.0",
     "testdouble": "3.16.1"
