--- a/package.json
+++ b/package.json
@@ -24,20 +24,23 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel 'lint:!(fix)'",
+    "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
-    "lint:js": "eslint .",
+    "lint:hbs:fix": "ember-template-lint . --fix",
+    "lint:js": "eslint . --cache",
+    "lint:js:fix": "eslint . --fix",
     "start": "ember serve",
-    "test": "npm-run-all lint:* test:*",
+    "test": "npm-run-all lint test:*",
     "test:ember": "ember test",
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
     "@ember/test-waiters": "^2.3.2",
     "debug": "4.3.1",
-    "ember-auto-import": "^1.10.1",
-    "ember-cli-babel": "7.23.0",
-    "ember-cli-htmlbars": "5.3.1",
+    "ember-auto-import": "^1.11.2",
+    "ember-cli-babel": "7.26.3",
+    "ember-cli-htmlbars": "5.7.1",
     "ember-decorators": "6.1.1",
     "ember-lodash": "4.19.5",
     "plotly.js": "1.58.4"
@@ -45,12 +48,13 @@
   "devDependencies": {
     "@babel/core": "^7",
     "@ember/optional-features": "2.0.0",
-    "@ember/test-helpers": "^2.1.4",
-    "@glimmer/component": "^1.0.3",
-    "@glimmer/tracking": "^1.0.3",
+    "@ember/test-helpers": "^2.2.5",
+    "@embroider/test-setup": "^0.37.0",
+    "@glimmer/component": "^1.0.4",
+    "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "3.0.0",
-    "ember-cli": "3.23.0",
+    "ember-cli": "3.26.1",
     "ember-cli-dependency-checker": "3.2.0",
     "ember-cli-deprecation-workflow": "1.0.1",
     "ember-cli-inject-live-reload": "2.0.2",
@@ -64,19 +68,23 @@
     "ember-load-initializers": "2.1.2",
     "ember-maybe-import-regenerator": "0.1.6",
     "ember-md5": "1.2.0",
-    "ember-qunit": "5.1.1",
+    "ember-page-title": "^6.2.1",
+    "ember-qunit": "5.1.4",
     "ember-resolver": "8.0.2",
-    "ember-source": "3.23.1",
+    "ember-source": "3.26.1",
     "ember-source-channel-url": "3.0.0",
-    "ember-template-lint": "^2.15.0",
+    "ember-template-lint": "^3.2.0",
     "ember-truth-helpers": "3.0.0",
     "ember-try": "1.4.0",
-    "eslint": "^7.16.0",
-    "eslint-plugin-ember": "10.1.1",
+    "eslint": "^7.23.0",
+    "eslint-config-prettier": "^8.1.0",
+    "eslint-plugin-ember": "10.3.0",
     "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-prettier": "^3.3.1",
     "loader.js": "4.7.0",
     "npm-run-all": "^4.1.5",
-    "qunit": "2.13.0",
+    "prettier": "^2.2.1",
+    "qunit": "^2.14.1",
     "qunit-dom": "1.6.0",
     "safe-json-stringify": "1.2.0",
     "testdouble": "3.16.1"
