--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "scripts": {
     "build": "ember build --environment=production",
-    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel 'lint:!(fix)'",
+    "lint": "npm-run-all --aggregate-output --continue-on-error --parallel \"lint:!(fix)\"",
     "lint:fix": "npm-run-all --aggregate-output --continue-on-error --parallel lint:*:fix",
     "lint:hbs": "ember-template-lint .",
     "lint:hbs:fix": "ember-template-lint . --fix",
@@ -48,16 +48,16 @@
   "devDependencies": {
     "@babel/core": "^7",
     "@ember/optional-features": "2.0.0",
-    "@ember/test-helpers": "^2.2.6",
-    "@embroider/test-setup": "^0.41.0",
+    "@ember/test-helpers": "^2.4.2",
+    "@embroider/test-setup": "^0.43.5",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
     "babel-eslint": "10.1.0",
     "broccoli-asset-rev": "3.0.0",
-    "ember-cli": "3.26.1",
+    "ember-cli": "3.28.0",
     "ember-cli-dependency-checker": "3.2.0",
     "ember-cli-deprecation-workflow": "1.0.1",
-    "ember-cli-inject-live-reload": "2.0.2",
+    "ember-cli-inject-live-reload": "2.1.0",
     "ember-cli-sri": "2.1.1",
     "ember-cli-terser": "^4.0.2",
     "ember-cli-testdouble": "0.1.4",
@@ -71,20 +71,21 @@
     "ember-page-title": "^6.2.2",
     "ember-qunit": "5.1.4",
     "ember-resolver": "8.0.2",
-    "ember-source": "3.26.1",
+    "ember-source": "3.28.0",
     "ember-source-channel-url": "3.0.0",
-    "ember-template-lint": "^3.4.2",
+    "ember-template-lint": "^3.6.0",
     "ember-truth-helpers": "3.0.0",
     "ember-try": "1.4.0",
-    "eslint": "^7.27.0",
+    "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "10.5.0",
+    "eslint-plugin-ember": "10.5.4",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-prettier": "^3.4.1",
+    "eslint-plugin-qunit": "^6.2.0",
     "loader.js": "4.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.0",
-    "qunit": "^2.15.0",
+    "prettier": "^2.3.2",
+    "qunit": "^2.16.0",
     "qunit-dom": "1.6.0",
     "safe-json-stringify": "1.2.0",
     "testdouble": "3.16.1",
