--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ember-cli-plotly",
-  "version": "0.7.0",
+  "version": "1.0.0-beta.1",
   "description": "A basic charting component using Plotly.js",
   "keywords": [
     "ember-addon",
@@ -60,8 +60,6 @@
     "ember-cli-inject-live-reload": "2.1.0",
     "ember-cli-sri": "2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-cli-testdouble": "0.1.4",
-    "ember-component-css": "0.7.4",
     "ember-decorators-polyfill": "1.1.5",
     "ember-disable-prototype-extensions": "1.1.3",
     "ember-export-application-global": "2.0.1",
