--- a/package.json
+++ b/package.json
@@ -42,12 +42,12 @@
     "ember-cli-babel": "7.26.11",
     "ember-cli-htmlbars": "6.0.1",
     "ember-decorators": "6.1.1",
-    "ember-lodash": "4.19.5",
-    "plotly.js": "2.11.1"
+    "ember-lodash": "4.19.5"
   },
   "devDependencies": {
     "@babel/core": "^7",
     "@ember/optional-features": "2.0.0",
+    "@ember/render-modifiers": "^2.0.4",
     "@ember/test-helpers": "^2.7.0",
     "@embroider/test-setup": "^0.45.0",
     "@glimmer/component": "^1.1.1",
@@ -87,6 +87,9 @@
     "safe-json-stringify": "1.2.0",
     "testdouble": "3.16.4",
     "webpack": "5"
+  },
+  "peerDependencies": {
+    "plotly.js": "2.*"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
