--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@
 #$   - scenario: embroider-safe
 #$   - scenario: embroider-optimized
 #$ nodeVersion: '12'
-#$ packageManager: yarn
+#$ packageManager: npm
 #
 
 name: CI
@@ -56,7 +56,7 @@ jobs:
 
     - name: Get package manager's global cache path
       id: global-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
+      run: echo "::set-output name=dir::$(npm config get cache)"
 
     - name: Cache package manager's global cache and node_modules
       id: cache-dependencies
@@ -66,18 +66,18 @@ jobs:
           ${{ steps.global-cache-dir-path.outputs.dir }}
           node_modules
         key: ${{ runner.os }}-${{ matrix.node-version }}-${{
-          hashFiles('**/yarn.lock'
+          hashFiles('**/package-lock.json'
           ) }}
         restore-keys: |
           ${{ runner.os }}-${{ matrix.node-version }}-
 
     - name: Install Dependencies
-      run: yarn install --frozen-lockfile
+      run: npm ci
       if: |
         steps.cache-dependencies.outputs.cache-hit != 'true'
 
     - name: Lint
-      run: yarn lint
+      run: npm run-script lint
 
 
   test:
@@ -101,7 +101,7 @@ jobs:
 
     - name: Get package manager's global cache path
       id: global-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
+      run: echo "::set-output name=dir::$(npm config get cache)"
 
     - name: Cache package manager's global cache and node_modules
       id: cache-dependencies
@@ -111,18 +111,18 @@ jobs:
           ${{ steps.global-cache-dir-path.outputs.dir }}
           node_modules
         key: ${{ runner.os }}-${{ matrix.node-version }}-${{
-          hashFiles('**/yarn.lock'
+          hashFiles('**/package-lock.json'
           ) }}
         restore-keys: |
           ${{ runner.os }}-${{ matrix.node-version }}-
 
     - name: Install Dependencies
-      run: yarn install --frozen-lockfile
+      run: npm ci
       if: |
         steps.cache-dependencies.outputs.cache-hit != 'true'
 
     - name: Test
-      run: yarn test:ember --launch ${{ matrix.browser }}
+      run: npm run-script test:ember --launch ${{ matrix.browser }}
 
 
   floating-dependencies:
@@ -146,7 +146,7 @@ jobs:
 
     - name: Get package manager's global cache path
       id: global-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
+      run: echo "::set-output name=dir::$(npm config get cache)"
 
     - name: Cache package manager's global cache and node_modules
       id: cache-dependencies
@@ -160,10 +160,10 @@ jobs:
           ${{ runner.os }}-${{ matrix.node-version }}-
 
     - name: Install Dependencies
-      run: yarn install --no-lockfile --non-interactive
+      run: npm install --no-package-lock
 
     - name: Test
-      run: yarn test:ember --launch ${{ matrix.browser }}
+      run: npm run-script test:ember --launch ${{ matrix.browser }}
 
 
   try-scenarios:
@@ -199,7 +199,7 @@ jobs:
 
     - name: Get package manager's global cache path
       id: global-cache-dir-path
-      run: echo "::set-output name=dir::$(yarn cache dir)"
+      run: echo "::set-output name=dir::$(npm config get cache)"
 
     - name: Cache package manager's global cache and node_modules
       id: cache-dependencies
@@ -209,13 +209,13 @@ jobs:
           ${{ steps.global-cache-dir-path.outputs.dir }}
           node_modules
         key: ${{ runner.os }}-${{ matrix.node-version }}-${{
-          hashFiles('**/yarn.lock'
+          hashFiles('**/package-lock.json'
           ) }}
         restore-keys: |
           ${{ runner.os }}-${{ matrix.node-version }}-
 
     - name: Install Dependencies
-      run: yarn install --frozen-lockfile
+      run: npm ci
       if: |
         steps.cache-dependencies.outputs.cache-hit != 'true'
 
