--- a/package.json
+++ b/package.json
@@ -41,7 +41,6 @@
     "ember-auto-import": "^2.4.1",
     "ember-cli-babel": "7.26.11",
     "ember-cli-htmlbars": "6.0.1",
-    "ember-decorators": "6.1.1",
     "ember-lodash": "4.19.5"
   },
   "devDependencies": {
@@ -52,8 +51,9 @@
     "@embroider/test-setup": "^1.6.0",
     "@glimmer/component": "^1.1.2",
     "@glimmer/tracking": "^1.1.2",
-    "babel-eslint": "10.1.0",
+    "babel-eslint": "^8.2.6",
     "broccoli-asset-rev": "3.0.0",
+    "ember-cached-decorator-polyfill": "^0.1.4",
     "ember-cli": "3.28.0",
     "ember-cli-dependency-checker": "3.3.1",
     "ember-cli-deprecation-workflow": "2.1.0",
@@ -63,8 +63,10 @@
     "ember-decorators-polyfill": "1.1.5",
     "ember-disable-prototype-extensions": "1.1.3",
     "ember-export-application-global": "2.0.1",
+    "ember-get-config": "^2.0.0",
     "ember-load-initializers": "2.1.2",
     "ember-maybe-import-regenerator": "1.0.0",
+    "ember-modifier": "^3.2.7",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "5.1.5",
     "ember-resolver": "8.0.3",
