--- a/package.json
+++ b/package.json
@@ -54,7 +54,7 @@
     "babel-eslint": "^8.2.6",
     "broccoli-asset-rev": "3.0.0",
     "ember-cached-decorator-polyfill": "^0.1.4",
-    "ember-cli": "3.28.0",
+    "ember-cli": "4.3.0",
     "ember-cli-dependency-checker": "3.3.1",
     "ember-cli-deprecation-workflow": "2.1.0",
     "ember-cli-inject-live-reload": "2.1.0",
@@ -65,16 +65,15 @@
     "ember-export-application-global": "2.0.1",
     "ember-get-config": "^2.0.0",
     "ember-load-initializers": "2.1.2",
-    "ember-maybe-import-regenerator": "1.0.0",
     "ember-modifier": "^3.2.7",
     "ember-page-title": "^7.0.0",
     "ember-qunit": "5.1.5",
     "ember-resolver": "8.0.3",
-    "ember-source": "3.28.1",
+    "ember-source": "4.3.0",
     "ember-source-channel-url": "3.0.0",
-    "ember-template-lint": "^3.8.0",
+    "ember-template-lint": "^4.3.0",
     "ember-truth-helpers": "3.0.0",
-    "ember-try": "1.4.0",
+    "ember-try": "2.0.0",
     "eslint": "^7.32.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-ember": "10.6.0",
@@ -88,7 +87,7 @@
     "qunit-dom": "2.0.0",
     "safe-json-stringify": "1.2.0",
     "testdouble": "3.16.5",
-    "webpack": "5"
+    "webpack": "^5.70.0"
   },
   "peerDependencies": {
     "plotly.js": "2.*"
