--- a/ember-cli-plotly/package.json
+++ b/ember-cli-plotly/package.json
@@ -33,6 +33,7 @@
     "@ember/test-waiters": "^3.0.1",
     "@embroider/addon-shim": "1.6.0",
     "debug": "4.3.4",
+    "ember-get-config": "^2.0.0",
     "ember-lodash": "4.19.5"
   },
   "devDependencies": {
