--- a/package.json
+++ b/package.json
@@ -1,23 +1,13 @@
 {
   "name": "ember-cli-plotly",
-  "version": "0.6.1",
-  "description": "A basic charting component using Plotly.js",
+  "version": "0.0.0",
+  "description": "The default blueprint for ember-cli addons.",
   "keywords": [
-    "ember-addon",
-    "data-visualization",
-    "visualization",
-    "chart",
-    "charting",
-    "graph",
-    "graphing",
-    "plot",
-    "plotting",
-    "plotly",
-    "plotly.js"
+    "ember-addon"
   ],
-  "repository": "https://github.com/EmberMN/ember-cli-plotly",
+  "repository": "",
   "license": "MIT",
-  "author": "Jacob Quant <jacobq@gmail.com>",
+  "author": "",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -36,59 +26,45 @@
     "test:ember-compatibility": "ember try:each"
   },
   "dependencies": {
-    "@ember/test-waiters": "^2.3.2",
-    "debug": "4.3.1",
-    "ember-auto-import": "^1.11.3",
-    "ember-cli-babel": "7.26.6",
-    "ember-cli-htmlbars": "5.7.1",
-    "ember-decorators": "6.1.1",
-    "ember-lodash": "4.19.5",
-    "plotly.js": "1.58.4"
+    "ember-cli-babel": "^7.26.11",
+    "ember-cli-htmlbars": "^6.0.1"
   },
   "devDependencies": {
-    "@babel/core": "^7",
-    "@ember/optional-features": "2.0.0",
-    "@ember/test-helpers": "^2.4.2",
-    "@embroider/test-setup": "^0.43.5",
+    "@ember/optional-features": "^2.0.0",
+    "@ember/test-helpers": "^2.6.0",
+    "@embroider/test-setup": "^1.2.0",
     "@glimmer/component": "^1.0.4",
     "@glimmer/tracking": "^1.0.4",
-    "babel-eslint": "10.1.0",
-    "broccoli-asset-rev": "3.0.0",
-    "ember-cli": "3.28.0",
-    "ember-cli-dependency-checker": "3.2.0",
-    "ember-cli-deprecation-workflow": "1.0.1",
-    "ember-cli-inject-live-reload": "2.1.0",
-    "ember-cli-sri": "2.1.1",
+    "babel-eslint": "^10.1.0",
+    "broccoli-asset-rev": "^3.0.0",
+    "ember-auto-import": "^2.4.0",
+    "ember-cli": "~4.2.0",
+    "ember-cli-dependency-checker": "^3.2.0",
+    "ember-cli-inject-live-reload": "^2.1.0",
+    "ember-cli-sri": "^2.1.1",
     "ember-cli-terser": "^4.0.2",
-    "ember-cli-testdouble": "0.1.4",
-    "ember-component-css": "0.7.4",
-    "ember-decorators-polyfill": "1.1.5",
-    "ember-disable-prototype-extensions": "1.1.3",
-    "ember-export-application-global": "2.0.1",
-    "ember-load-initializers": "2.1.2",
-    "ember-maybe-import-regenerator": "0.1.6",
-    "ember-md5": "1.2.0",
-    "ember-page-title": "^6.2.2",
-    "ember-qunit": "5.1.4",
-    "ember-resolver": "8.0.2",
-    "ember-source": "3.28.0",
-    "ember-source-channel-url": "3.0.0",
-    "ember-template-lint": "^3.6.0",
-    "ember-truth-helpers": "3.0.0",
-    "ember-try": "1.4.0",
+    "ember-disable-prototype-extensions": "^1.1.3",
+    "ember-export-application-global": "^2.0.1",
+    "ember-load-initializers": "^2.1.2",
+    "ember-page-title": "^7.0.0",
+    "ember-qunit": "^5.1.5",
+    "ember-resolver": "^8.0.3",
+    "ember-source": "~4.2.0",
+    "ember-source-channel-url": "^3.0.0",
+    "ember-template-lint": "^4.2.0",
+    "ember-try": "^2.0.0",
     "eslint": "^7.32.0",
-    "eslint-config-prettier": "^8.3.0",
-    "eslint-plugin-ember": "10.5.4",
-    "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-prettier": "^3.4.1",
-    "eslint-plugin-qunit": "^6.2.0",
-    "loader.js": "4.7.0",
+    "eslint-config-prettier": "^8.4.0",
+    "eslint-plugin-ember": "^10.5.9",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-qunit": "^7.2.0",
+    "loader.js": "^4.7.0",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.3.2",
-    "qunit": "^2.16.0",
-    "qunit-dom": "1.6.0",
-    "safe-json-stringify": "1.2.0",
-    "testdouble": "3.16.1"
+    "prettier": "^2.5.1",
+    "qunit": "^2.18.0",
+    "qunit-dom": "^2.0.0",
+    "webpack": "^5.69.1"
   },
   "engines": {
     "node": "12.* || 14.* || >= 16"
